Added pagination to get user subscriptions
